--- a/public/500.html
+++ b/public/500.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		
-		<title>404 err</title>
+		<title>500 err</title>
 		
 		<link href="./semantic.min.css" rel="stylesheet">
 		
@@ -82,14 +82,14 @@
 	<body>
 		
 		<div class="container">
-			<img id="iconImage" class="ui avatar image" align="center" src="/public/images/404err.png" width="1000", height="700">
+			<img id="iconImage" class="ui avatar image" align="center" src="/public/images/500err.png" width="1000", height="700">
 			<div id="cardbox" class="ui blue fluid card">
 				 <div class="content">
 					<div>
 						<div id="titleText" class="header">Error</div>
 						<br>
 	   					<div id="contentsText" class="description">
-					       	요청하신 페이지를 찾을 수 없습니다.
+					       	서버 측 Error가 발생했습니다.
 					    </div>
 					</div>
 				 </div>
